# iot

./: .clang-format  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_commands.json  crow_all.h  iot-config.json  iot-config.yaml  iot.service  lib.cpp  libs.h  test.cpp  yolo_console_dll.cpp
.github/workflows/: cmake.yml
docs/: JetsonNano-RemoteVNCAccess.html  activityDiagram.drawio  classDiagram.drawio  notifyingActionOverInternet.drawio  notifyingFlow.drawio  usecases.drawio
include/: DiscordNotifier.hpp  Notifier.hpp  customized.hpp  lib.h  main.hpp  pid_tracker.hpp  rules.hpp  version.h
libs/services/: CMakeLists.txt  README.md
libs/services/include/: config_mgr.h  logger.h  monitor.h  server.h
libs/services/src/: config_mgr.cpp  logger.cpp  monitor.cpp  server.cpp
libs/services/unittests/: CMakeLists.txt  config_mgr_test.cc  hardware_test.cc  interface_test.cc  iot-config.json  iot-config.yaml  logger_test.cc
src/: DiscordNotifier.cpp  Notifier.cpp  lib.cpp  yolo_console_dll.cpp
unittests/: CMakeLists.txt  config_mgr_test.cc  discordNotifier_test.cc  hardware_test.cc  interface_test.cc  iot-config.json  logger_test.cc  rules_test.cpp
